[project]
name = "topsis_tavish_102303246"
version = "0.1.1"
description = "A Python package for Topsis method implementation"
readme = "README.md"
authors = [
    { name = "Tavish Sood", email = "tavish005sood@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "pandas>=2.3.3",
    "pyxlsx>=1.1.3",
]

[project.scripts]
topsis = "topsis:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
